--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vinstagram</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Vinstagram</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    Hello, I am Vinstagram
+  <h1>Vinstagram's artworks</h1>
+  <h2>Based on <a href="http://thecodeplayer.com/walkthrough/perspective-mockups-css3-3d-transforms">Perspective Mobile App Mockups</a></h2>
+  <ul class="grid">
+    <li class="item"><a target="_blank" href="./ditto/"><iframe src="./ditto/" width="320" height="568"></iframe></a><span class="s"></span></li>
+    <li class="item"><a target="_blank" href="./dancing-rainbow/"><iframe src="./dancing-rainbow/" width="320" height="568"></iframe></a><span class="s"></span></li>
+    <li class="item"><a target="_blank" href="./fun-button/"><iframe src="./fun-button/" width="320" height="568"></iframe></a><span class="s"></span></li>
+    <li class="item"><a target="_blank" href="./star-wars/"><iframe src="./star-wars/" width="320" height="568"></iframe></a><span class="s"></span></li>
+  </ul>
 </body>
 </html>
