--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,38 @@
   <h1>Vinstagram's artworks</h1>
   <h2>Based on <a href="http://thecodeplayer.com/walkthrough/perspective-mockups-css3-3d-transforms">Perspective Mobile App Mockups</a></h2>
   <ul class="grid">
-    <li class="item"><a target="_blank" href="./ditto/"><iframe src="./ditto/" width="320" height="568"></iframe></a><span class="s"></span></li>
-    <li class="item"><a target="_blank" href="./dancing-rainbow/"><iframe src="./dancing-rainbow/" width="320" height="568"></iframe></a><span class="s"></span></li>
-    <li class="item"><a target="_blank" href="./fun-button/"><iframe src="./fun-button/" width="320" height="568"></iframe></a><span class="s"></span></li>
-    <li class="item"><a target="_blank" href="./star-wars/"><iframe src="./star-wars/" width="320" height="568"></iframe></a><span class="s"></span></li>
+    <li class="item">
+      <iframe src="./fun-button/" width="320" height="568"></iframe><span class="s"></span>
+      <a href="./fun-button/">
+        <span>
+          Fun Button
+        </span>
+      </a>
+    </li>
+    <li class="item">
+      <iframe src="./ditto/" width="320" height="568"></iframe><span class="s"></span>
+      <a href="./ditto/">
+        <span>
+          Ditto
+        </span>
+      </a>
+    </li>
+    <li class="item">
+      <iframe src="./dancing-rainbow/" width="320" height="568"></iframe><span class="s"></span>
+      <a href="./dancing-rainbow/">
+        <span>
+          Dancing Rainbow
+        </span>
+      </a>
+    </li>
+    <li class="item">
+      <iframe src="./star-wars/" width="320" height="568"></iframe><span class="s"></span>
+      <a href="./star-wars/">
+        <span>
+          Star Wars
+        </span>
+      </a>
+    </li>
   </ul>
 </body>
 </html>
