--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,14 @@
         </span>
       </a>
     </li>
+    <li class="item">
+      <iframe src="./snake-game/" width="320" height="568"></iframe><span class="s"></span>
+      <a href="./snake-game/">
+        <span>
+          Snake Game
+        </span>
+      </a>
+    </li>
   </ul>
 </body>
 </html>
